--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -40,7 +40,7 @@
             <i class="fas fa-chevron-down" [class.rotated]="isDropdownOpen"></i>
           </button>
           <div class="dropdown-menu" [class.show]="isDropdownOpen">
-            <a routerLink="/perfil" (click)="closeDropdown()">
+            <a routerLink="/profile" (click)="closeDropdown()">
               <i class="fas fa-user"></i>
               Mi Perfil
             </a>
