fix: actualizar textos de planes - combinaciones ilimitadas y validez 30 días

--- a/src/app/pages/confirmacion-plan-mensual/confirmacion-plan-mensual.component.html
+++ b/src/app/pages/confirmacion-plan-mensual/confirmacion-plan-mensual.component.html
@@ -70,7 +70,7 @@
       <ul class="features-list">
         <li>
           <i class="fas fa-check"></i>
-          <span>Hasta 4 combinaciones ganadoras para cada uno de los 7 sorteos</span>
+          <span>Combinaciones ganadoras ilimitadas para cada uno de los 7 sorteos</span>
         </li>
         <li>
           <i class="fas fa-check"></i>
@@ -78,7 +78,7 @@
         </li>
         <li>
           <i class="fas fa-check"></i>
-          <span>Válido para todos los sorteos del mes en curso desde la fecha de inscripción</span>
+          <span>Válido para todos los sorteos del mes en curso desde la fecha de inscripción durante 30 días</span>
         </li>
         <li>
           <i class="fas fa-check"></i>
