--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -260,7 +260,7 @@
         </div>
         <div class="plan-features">
           <ul>
-            <li>5 combinaciones para 3 sorteos</li>
+            <li>Combinaciones ganadoras ilimitadas para cada uno de los 7 sorteos</li>
             <li>Acceso a 3 IAs especializadas</li>
             <li>Validez de 30 días</li>
             <li>Soporte prioritario</li>
