fix: actualizar textos de planes - combinaciones ilimitadas y validez 30 días

--- a/src/app/pages/planes/planes.component.html
+++ b/src/app/pages/planes/planes.component.html
@@ -77,7 +77,7 @@
             <tr>
               <td>Combinaciones por sorteo</td>
               <td>3</td>
-              <td>Hasta 4</td>
+              <td>Ilimitadas</td>
               <td>Ilimitadas</td>
             </tr>
             <tr>
