Fix: Corregir ruta Mi Perfil, mover botón Cerrar Sesión al perfil y restaurar nombre usuario

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -75,8 +75,7 @@
                     <span>Bienvenido, {{currentUser.nombre}}</span>
                 </div>
                 <div class="user-actions-menu">
-                    <button class="btn-profile" routerLink="/profile">Mi Perfil</button>
-                    <button class="btn-logout" (click)="logout()">Cerrar Sesión</button>
+                    <button class="btn-profile" routerLink="/perfil">Mi Perfil</button>
                 </div>
             </div>
 
