--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -72,7 +72,7 @@
             <!-- Mostrar esto solo si hay usuario autenticado -->
             <div class="user-menu" *ngIf="currentUser">
                 <div class="user-info">
-                    <span>Bienvenido, {{currentUser.name}}</span>
+                    <span>Bienvenido, {{getFirstName()}}</span>
                 </div>
                 <div class="user-actions-menu">
                     <button class="btn-profile" routerLink="/perfil">Mi Perfil</button>
